Fix layout bugs

--- a/style.css
+++ b/style.css
@@ -23,9 +23,11 @@ nav {
 }
     nav img {
         height: 40px;
+        flex-shrink: 1;
     }
     nav ul{
         margin: 0;
+        padding: 0;
         list-style: none;
         display: flex;
         align-items: center;
